--- a/modules/reference/pages/_pdf-reference-manual.adoc
+++ b/modules/reference/pages/_pdf-reference-manual.adoc
@@ -222,7 +222,7 @@ endif::[]
 // PDF Reference Manual
 ifdef::backend-pdf[]
 = Reference Manual: {productname} {productnumber}
-include::./branding/pdf/entities.adoc[]
+include::ROOT:partial$pdf-entities.adoc[]
 :toclevels: 3
 :doctype: book
 
