--- a/modules/client-configuration/pages/_pdf-client-config-guide.adoc
+++ b/modules/client-configuration/pages/_pdf-client-config-guide.adoc
@@ -71,7 +71,7 @@ endif::[]
 // PDF Client Configuration Guide
 ifdef::backend-pdf[]
 = Client Configuration Guide: {productname} {productnumber}
-include::./branding/pdf/entities.adoc[]
+include::ROOT:partial$pdf-entities.adoc[]
 :toclevels: 3
 
 include::modules/client-configuration/pages/client-config-overview.adoc[leveloffset=+1]
