--- a/modules/client-configuration/pages/_pdf-client-config-guide.adoc
+++ b/modules/client-configuration/pages/_pdf-client-config-guide.adoc
@@ -74,109 +74,109 @@ ifdef::backend-pdf[]
 include::ROOT:partial$pdf-entities.adoc[]
 :toclevels: 3
 
-include::modules/client-configuration/pages/client-config-overview.adoc[leveloffset=+1]
+include::client-config-overview.adoc[leveloffset=+1]
 
-include::modules/client-configuration/pages/supported-features.adoc[leveloffset=+2]
-include::modules/client-configuration/pages/supported-features-sles.adoc[leveloffset=+3]
-include::modules/client-configuration/pages/supported-features-es.adoc[leveloffset=+3]
-include::modules/client-configuration/pages/supported-features-rh.adoc[leveloffset=+3]
-include::modules/client-configuration/pages/supported-features-centos.adoc[leveloffset=+3]
-include::modules/client-configuration/pages/supported-features-ubuntu.adoc[leveloffset=+3]
+include::supported-features.adoc[leveloffset=+2]
+include::supported-features-sles.adoc[leveloffset=+3]
+include::supported-features-es.adoc[leveloffset=+3]
+include::supported-features-rh.adoc[leveloffset=+3]
+include::supported-features-centos.adoc[leveloffset=+3]
+include::supported-features-ubuntu.adoc[leveloffset=+3]
 ifeval::[{uyuni-content} == true]
-include::modules/client-configuration/pages/supported-features-debian.adoc[leveloffset=+3]
+include::supported-features-debian.adoc[leveloffset=+3]
 endif::[]
 
 // Manual Registration
 
-include::modules/client-configuration/pages/registration-overview.adoc[leveloffset=+1]
+include::registration-overview.adoc[leveloffset=+1]
 
-include::modules/client-configuration/pages/registration-webui.adoc[leveloffset=+2]
+include::registration-webui.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/registration-bootstrap.adoc[leveloffset=+2]
+include::registration-bootstrap.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/clients-and-activation-keys.adoc[leveloffset=+2]
+include::clients-and-activation-keys.adoc[leveloffset=+2]
 
 // Clients on a Proxy
 
-include::modules/client-configuration/pages/client-proxy.adoc[leveloffset=+1]
+include::client-proxy.adoc[leveloffset=+1]
 
-include::modules/client-configuration/pages/salt-client-proxy.adoc[leveloffset=+2]
-include::modules/client-configuration/pages/cli-client-proxy.adoc[leveloffset=+2]
+include::salt-client-proxy.adoc[leveloffset=+2]
+include::cli-client-proxy.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/script-client-proxy.adoc[leveloffset=+2]
+include::script-client-proxy.adoc[leveloffset=+2]
 
 // Automated Installation
 
-include::modules/client-configuration/pages/autoinstallation-methods.adoc[leveloffset=+1]
-include::modules/client-configuration/pages/client-automating-preparation.adoc[leveloffset=+1]
-include::modules/client-configuration/pages/client-automating-installation.adoc[leveloffset=+1]
+include::autoinstallation-methods.adoc[leveloffset=+1]
+include::client-automating-preparation.adoc[leveloffset=+1]
+include::client-automating-installation.adoc[leveloffset=+1]
 
-// include::modules/client-configuration/pages/autoyast.adoc[leveloffset=+2]
+// include::autoyast.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/kickstart.adoc[leveloffset=+2]
+include::kickstart.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/cobbler.adoc[leveloffset=+2]
+include::cobbler.adoc[leveloffset=+2]
 
 
 // Non-SUSE Clients
 
-include::modules/client-configuration/pages/non-suse-clients.adoc[leveloffset=+1]
+include::non-suse-clients.adoc[leveloffset=+1]
 
-include::modules/client-configuration/pages/clients-sleses.adoc[leveloffset=+2]
+include::clients-sleses.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/clients-rh.adoc[leveloffset=+2]
+include::clients-rh.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/clients-centos.adoc[leveloffset=+2]
+include::clients-centos.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/clients-ubuntu.adoc[leveloffset=+2]
+include::clients-ubuntu.adoc[leveloffset=+2]
 
 // Virtualization
-include::modules/client-configuration/pages/virtualization.adoc[leveloffset=+1]
+include::virtualization.adoc[leveloffset=+1]
 
-include::modules/client-configuration/pages/virt-xenkvm.adoc[leveloffset=+2]
+include::virt-xenkvm.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/virt-vmware.adoc[leveloffset=+2]
+include::virt-vmware.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/virt-file.adoc[leveloffset=+2]
+include::virt-file.adoc[leveloffset=+2]
 
 // VHMs
-include::modules/client-configuration/pages/vhm.adoc[leveloffset=+1]
+include::vhm.adoc[leveloffset=+1]
 
-include::modules/client-configuration/pages/vhm-azure.adoc[leveloffset=+2]
+include::vhm-azure.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/vhm-aws.adoc[leveloffset=+2]
+include::vhm-aws.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/vhm-gce.adoc[leveloffset=+2]
+include::vhm-gce.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/vhm-kubernetes.adoc[leveloffset=+2]
+include::vhm-kubernetes.adoc[leveloffset=+2]
 
-// include::modules/client-configuration/pages/vhm-caasp.adoc[leveloffset=+2]
+// include::vhm-caasp.adoc[leveloffset=+2]
 
 // Client Admin Tasks
-include::modules/client-configuration/pages/channels.adoc[leveloffset=+1]
+include::channels.adoc[leveloffset=+1]
 
-include::modules/client-configuration/pages/creating-a-tools-repository.adoc[leveloffset=+1]
+include::creating-a-tools-repository.adoc[leveloffset=+1]
 
 // Contact Methods
-include::modules/client-configuration/pages/contact-methods-intro.adoc[leveloffset=+1]
+include::contact-methods-intro.adoc[leveloffset=+1]
 
-include::modules/client-configuration/pages/contact-methods-rhnsd.adoc[leveloffset=+2]
+include::contact-methods-rhnsd.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/contact-methods-pushssh.adoc[leveloffset=+2]
+include::contact-methods-pushssh.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/contact-methods-saltssh.adoc[leveloffset=+2]
+include::contact-methods-saltssh.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/contact-methods-osad.adoc[leveloffset=+2]
+include::contact-methods-osad.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/using-ssm.adoc[leveloffset=+1]
+include::using-ssm.adoc[leveloffset=+1]
 
 // Troubleshooting
-include::modules/client-configuration/pages/tshoot-clients.adoc[leveloffset=+1]
+include::tshoot-clients.adoc[leveloffset=+1]
 
 // Appendices
-include::modules/client-configuration/pages/autoyast-example.adoc[leveloffset=+1]
+include::autoyast-example.adoc[leveloffset=+1]
 
 // Licence
-include::modules/client-configuration/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
+include::common_gfdl1.2_i.adoc[leveloffset=+1]
 
 endif::[]
