--- a/modules/salt/pages/_pdf-salt-guide.adoc
+++ b/modules/salt/pages/_pdf-salt-guide.adoc
@@ -36,53 +36,53 @@ include::ROOT:partial$pdf-entities.adoc[]
 :toclevels: 2
 :doctype: book
 
-include::modules/salt/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
+include::common_gfdl1.2_i.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-intro.adoc[leveloffset=+1]
+include::salt-intro.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-terminology.adoc[leveloffset=+1]
+include::salt-terminology.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-command.adoc[leveloffset=+1]
+include::salt-command.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-useful-commands.adoc[leveloffset=+1]
+include::salt-useful-commands.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-states.adoc[leveloffset=+1]
+include::salt-states.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-file-locations.adoc[leveloffset=+1]
+include::salt-file-locations.adoc[leveloffset=+1]
 
 // Formulas
-include::modules/salt/pages/formulas-intro.adoc[leveloffset=+1]
+include::formulas-intro.adoc[leveloffset=+1]
 
-include::modules/salt/pages/formula-bind.adoc[leveloffset=+2]
+include::formula-bind.adoc[leveloffset=+2]
 
-include::modules/salt/pages/formula-branchnetwork.adoc[leveloffset=+2]
+include::formula-branchnetwork.adoc[leveloffset=+2]
 
-include::modules/salt/pages/formula-dhcpd.adoc[leveloffset=+2]
+include::formula-dhcpd.adoc[leveloffset=+2]
 
-include::modules/salt/pages/formula-imagesync.adoc[leveloffset=+2]
+include::formula-imagesync.adoc[leveloffset=+2]
 
-include::modules/salt/pages/formula-pxe.adoc[leveloffset=+2]
+include::formula-pxe.adoc[leveloffset=+2]
 
-include::modules/salt/pages/formula-saltboot.adoc[leveloffset=+2]
+include::formula-saltboot.adoc[leveloffset=+2]
 
-include::modules/salt/pages/formula-tftpd.adoc[leveloffset=+2]
+include::formula-tftpd.adoc[leveloffset=+2]
 
-include::modules/salt/pages/formula-vsftpd.adoc[leveloffset=+2]
+include::formula-vsftpd.adoc[leveloffset=+2]
 
-include::modules/salt/pages/formulas-custom.adoc[leveloffset=+2]
+include::formulas-custom.adoc[leveloffset=+2]
 
 //*** xref:salt-example-formula.adoc[leveloffset=+2]
 
-include::modules/salt/pages/salt-ssh.adoc[leveloffset=+1]
+include::salt-ssh.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-timeouts.adoc[leveloffset=+1]
+include::salt-timeouts.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-rate-limiting.adoc[leveloffset=+1]
+include::salt-rate-limiting.adoc[leveloffset=+1]
 
-include::modules/salt/pages/large-scale.adoc[leveloffset=+1]
+include::large-scale.adoc[leveloffset=+1]
 
-include::modules/salt/pages/large-scale-tuning.adoc[leveloffset=+2]
+include::large-scale-tuning.adoc[leveloffset=+2]
 
-include::modules/salt/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
+include::common_gfdl1.2_i.adoc[leveloffset=+1]
 
 endif::[]
