--- a/modules/architecture/pages/traditional-rhnsd.adoc
+++ b/modules/architecture/pages/traditional-rhnsd.adoc
@@ -1,7 +1,7 @@
 [[bp.contact.methods.rhnsd]]
 = Traditional Contact Method (rhnsd)
 
-For background information, see xref:architecture:rhnsd.adoc[].
+For background information, see xref:rhnsd.adoc[].
 *rhnsd* is used non-systemd systems; on later systems, a systemd timer ([systemitem]``rhnsd.timer``) is used.
 
 The daemon is started by /etc/init.d/rhnsd, it does not use rhnsd.service. 
